2009-01-12  Till Kamppeter <till.kamppeter@gmail.com>

	* acinclude.m4: Eliminated warnings when generating ./configure

2009-01-08  Till Kamppeter <till.kamppeter@gmail.com>

	* README, USAGE: Version 4.0.0.

	* STANDARD_installation: Tell also that "sudo make install" works
	  to run "make install" as root.

	* Makefile.am: Fixed cleaning rules. Many transient files did not
	  get removed.
	  Fixed "make inplace" and uninstalling rules.

2009-01-03  Till Kamppeter <till.kamppeter@gmail.com>

	* postscript.c: Do the workaround for PostScript input of
	  OpenOffice 1.1.x also for StarOffice 8 (Thanks to Martin Jacobs,
	  martin dot jacobs at arcor dot de, for the patch).

2008-12-10  Till Kamppeter <till.kamppeter@gmail.com>

	* foomaticrip.c, foomaticrip.h, options.c: The PostScript code of
	  PostScript options did not get inserted when the spooler is CUPS
	  and foomatic-rip had to convert incoming PDF to PostScript
	  (Ubuntu bug #299918).

2008-12-05  Till Kamppeter <till.kamppeter@gmail.com>

	* README: Updated for Foomatic 4.x

	* test/*: Added test suite based on the LSB tests for foomatic-rip

	* README, USAGE, foomatic-rip.1.in, foomaticrip.c, options.c, pdf.c.
	  spooler.c: s/GhostScript/Ghostscript/

2008-11-30  Till Kamppeter <till.kamppeter@gmail.com>

	* postscript.c: Insert the "%%PageSetup" section directly after
	  the DSC comment header of the page, all page drawing commands
	  must be after the section.

	* postscript.c: Inserted PostScript option settings from pstops
	  were not corrected with custom option settings done on the
	  command line (numerical, string, password).

	* options.c: Small fix for better readability.

	* renderer.c: If there was only one PJL option in the PPD no PJL got
	  added at all (Ubuntu bug #303691).

	* renderer.c: Fixed several bugs in the merging of PJL options.
	  In some cases equal keywords were not found in the two JCL
	  option sets or keywords only differing by the last character